[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pychillplus"
version = "1.1.0"
dependencies = [
    "tqdm",
    "numba",
    "numpy",
    "scipy",
    "pandas",
    "mdtraj",
]

[project.scripts]
pychillplus = "chillplus:main"

[tool.setuptools]
py-modules = ["chillplus"]

[tool.setuptools.package-dir]
"" = "src"
